--- a/app/src/main/res/navigation/econews_nav_graph.xml
+++ b/app/src/main/res/navigation/econews_nav_graph.xml
@@ -2,30 +2,45 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/econews_nav_graph"
-    app:startDestination="@id/listByCategoryFragment">
+    android:id="@+id/econewsNavGraph"
+    app:startDestination="@id/categoryListFragment">
+
+
+    <fragment
+        android:id="@+id/categoryListFragment"
+        android:name="com.iwandepe.ebukkotlin.econews.CategoryListFragment"
+        android:label="CategoryListFragment" >
+        <action
+            android:id="@+id/action_categoryListFragment_to_listByCategoryFragment"
+            app:destination="@id/listByCategoryFragment">
+            <argument
+                android:name="country"
+                app:argType="string"/>
+        </action>
+    </fragment>
 
     <fragment
         android:id="@+id/listByCategoryFragment"
         android:name="com.iwandepe.ebukkotlin.econews.ListByCategoryFragment"
-        android:label="fragment_list_by_category"
-        tools:layout="@layout/fragment_list_by_category" >
+        android:label="ListByCategoryFragment" >
+        <argument
+            android:name="country"
+            app:argType="string"/>
         <action
             android:id="@+id/action_listByCategoryFragment_to_detailDataFragment"
-            app:destination="@id/detailDataFragment" />
+            app:destination="@id/detailDataFragment">
+            <argument
+                android:name="linkToWeb"
+                app:argType="string"/>
+        </action>
     </fragment>
-    <fragment
-        android:id="@+id/categoryListFragment"
-        android:name="com.iwandepe.ebukkotlin.econews.CategoryListFragment"
-        android:label="fragment_category_list"
-        tools:layout="@layout/fragment_category_list" >
-        <action
-            android:id="@+id/action_categoryListFragment_to_listByCategoryFragment"
-            app:destination="@id/listByCategoryFragment" />
-    </fragment>
+
     <fragment
         android:id="@+id/detailDataFragment"
         android:name="com.iwandepe.ebukkotlin.econews.DetailDataFragment"
-        android:label="fragment_detail_data"
-        tools:layout="@layout/fragment_detail_data" />
+        android:label="DetailDataFragment">
+        <argument
+            android:name="linkToWeb"
+            app:argType="string"/>
+    </fragment>
 </navigation>
